# yaman

./: README.md  base.sh  config.yaml  guakeInterface.py  pyproject.toml  setup.py  ta.sh  template.yaml  test.sh  text.py  tman.py  yakuakeInterface.py  yaman.py  yp.py
inc/: sessionBuilder.py  sessionManager.py
inc/interface/: yakuake.py
